@@ -12,6 +12,6 @@ INCLUDES = -I$(top_srcdir) -I$(includedir) \
 
 bin_PROGRAMS = gnomeradio
 
-gnomeradio_SOURCES = gui.c tech.c prefs.c rec_tech.c record.c lirc.c gui.h tech.h prefs.h rec_tech.h record.h lirc.h           
+gnomeradio_SOURCES = eggtrayicon.c gui.c tech.c prefs.c rec_tech.c record.c lirc.c eggtrayicon.h gui.h tech.h prefs.h rec_tech.h record.h lirc.h           
 		
 gnomeradio_LDADD = $(GNOMERADIO_LIBS) $(LIRC)
